--- a/css/style.css
+++ b/css/style.css
@@ -174,7 +174,9 @@ main section.container {
     margin-top: 3%;
     margin-bottom: 3%;
     margin-left: auto;
-    margin-right: auto; class=""
+    margin-right: auto;
+}
+
 .info p {
     color: #808080;
     margin: auto;
